@@ -1,4 +1,9 @@
 
+2018-01-23  Ron Norman <rjn@inglenet.com>
+
+	* tree.c: fixed coding error to use CB_FIELD_PTR
+	* codegen.c, typeck.c: changed to use CB_FIELD_PTR as needed
+
 2018-01-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y: use position of last section when defining an implicit
